# rozemyne

./: .gitignore  .gitmodules  Cargo.toml  README.md  generate_entity.sh
.reuse/templates/: rust.commented.jinja2
axum-jwt/: Cargo.toml
axum-jwt/src/: lib.rs
migration/: Cargo.lock.license  Cargo.toml
migration/src/: lib.rs  m20220902_200728_create_user_table.rs  m20230322_044417_create_user_idp_id_table.rs  m20230322_051542_create_book_table.rs  m20230322_061805_create_facet_table.rs  m20230322_070150_create_book_file_table.rs  m20230322_074753_create_book_facet_table.rs  m20230322_074753_create_book_x_facet_table.rs  m20230322_080938_create_book_meta_table.rs
rozemyne/: Cargo.toml  architecture.md  generate_entity.sh
rozemyne/migration/: README.md
rozemyne/migration/src/: m20220902_200728_create_user_table.rs  main.rs
rozemyne/src/: config.rs  main.rs
rozemyne/src/api/auth/: mod.rs  oidc.rs
rozemyne/src/api/auth/dummy/: mod.rs
rozemyne/src/api/v1/: mod.rs
rozemyne/src/api/v1/admin/: mod.rs
rozemyne/src/api/v1/files/: mod.rs
rozemyne/src/api/v1/user/: mod.rs
rozemyne/src/entity/: user.rs
rozemyne/src/error/: mod.rs
rozemyne/src/types/: auth_token.rs  mod.rs
rozemyne/src/util/: jwt.rs  mod.rs  oidc.rs
src/: main.rs
src/api/: mod.rs
src/api/auth/: mod.rs
src/api/v1/: mod.rs
src/api/v1/files/: mod.rs
src/entity/: mod.rs  prelude.rs
src/types/: auth_token.rs  mod.rs
