[package]
name = "rozemyne"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-client-addr = "0.5.0"
lazy_static = "1.4.0"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
toml = "0.5.8"
serde = "1.0.131"
log = "0.4.14"
regex = "1.5.4"
prometheus = { version = "0.13.0", features = ["process"] }
custom_error = "1.9.2"
argon2 = "0.3.2"
